# pricemap

./: .dockerignore  .env.example  .env.prod.example  .gitignore  CLAUDE.md  README.md  dev-dashboard.sh  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile  Dockerfile.prod  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/src/: config.py  main.py
backend/src/api/v1/: geocode.py  health.py  properties.py  router.py  stats.py  valuations.py
backend/src/core/: auth.py  celery_app.py  database.py  redis.py  telemetry.py
backend/src/ml/: artifact_predictor.py  comparables.py  confidence.py  features.py  locality_resolver.py  location_features.py  mt_locality_centroids.json  predictor.py
backend/src/models/: __init__.py  country.py  price_index.py  property.py  valuation.py
backend/src/schemas/: geocode.py  property.py  valuation.py
backend/src/services/: geocode_rate_limit.py  geocoding_service.py  llm_enrichment_service.py  property_service.py  stats_service.py  valuation_job_store.py  valuation_service.py
backend/src/tasks/: valuation.py
backend/tests/: conftest.py
backend/tests/test_api/: test_valuation_enriched_validation.py
backend/tests/test_core/: test_auth.py
backend/tests/test_ml/: test_artifact_predictor.py  test_features.py  test_locality_resolver.py
data/: geocode_cache.json  geocode_cache_bg.json
docs/: TODO.md  architecture.md  branding-domain-candidates.md  data-quality.md  email-setup.md  (+6 more)
ml/: pyproject.toml
ml/artifacts/: mt_apartment_rent_encoders_v20260703.joblib  mt_apartment_rent_encoders_v20260705.joblib  mt_apartment_rent_lgb_v20260628.joblib  mt_apartment_rent_lgb_v20260703.joblib  mt_apartment_rent_lgb_v20260705.joblib  mt_apartment_rent_meta_v20260408.json  mt_apartment_rent_meta_v20260409.json  mt_apartment_rent_meta_v20260628.json  mt_apartment_rent_meta_v20260703.json  mt_apartment_rent_meta_v20260705.json  mt_apartment_rent_xgb_v20260628.joblib  mt_apartment_rent_xgb_v20260703.joblib  mt_apartment_rent_xgb_v20260705.joblib  mt_apartment_sale_encoders_v20260703.joblib  mt_apartment_sale_encoders_v20260705.joblib  mt_apartment_sale_lgb_v20260628.joblib  mt_apartment_sale_lgb_v20260703.joblib  mt_apartment_sale_lgb_v20260705.joblib  mt_apartment_sale_meta_v20260408.json  mt_apartment_sale_meta_v20260409.json  mt_apartment_sale_meta_v20260628.json  mt_apartment_sale_meta_v20260703.json  mt_apartment_sale_meta_v20260705.json  mt_apartment_sale_xgb_v20260628.joblib  mt_apartment_sale_xgb_v20260703.joblib  mt_apartment_sale_xgb_v20260705.joblib
ml/src/: config.py  evaluate.py  feature_store.py  train.py
pipeline/: Dockerfile  pyproject.toml  scrapy.cfg
pipeline/src/: items.py  middlewares.py  settings.py
pipeline/src/importers/: hpi_importer.py
pipeline/src/pipelines/: cleaning.py  deduplication.py  geocoding.py  persistence.py  price_adjustment.py
pipeline/src/spiders/: base.py  bg_imot.py  mt_ppr.py  mt_propertymarket.py
(+140 files in other folders)
