[project]
name = "pricemap-ml"
version = "0.1.0"
description = "Model training for PriceMap property valuation"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.30",
    "psycopg2-binary>=2.9.9",
    "geoalchemy2>=0.15.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "lightgbm>=4.4.0",
    "xgboost>=2.1.0",
    "shap>=0.45.0",
    "joblib>=1.4.0",
    "matplotlib>=3.9.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
